--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 						    		</div>
 						    	</div>
 
-							</div>	   
+							</div>	
+							<!---hello--->   
 
 					    <div class="item">
 					      <div class="container-fluid" style="background-image: url(image/bg2.png);">
