--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 						<div class="header-info pull-right">
 							<img class="phone3" src="image/Phone2.png">
 							<a href="tel:085/9066336" class="tel" title="Tel">
-
 								<strong class="hidden-mm hidden-xs">
 									085/9066336
 								</strong>
@@ -56,7 +55,7 @@
 							</a>
 							<div class="login hidden-mm hidden-xs">
 								
-								<a href="/login" data-href="/loginx" data-toggle="modal" data-target="#accedi2" title="Login">Login<img src="image/key.png"></a>
+								<a href="/login" data-href="/loginx" data-toggle="modal" data-target="#accedi2" title="Login">Login<img src="image/key.png" style="position: absolute; margin-top: -1%;"></a>
 							</div>
 						</div>
 						<hr class="hr-menu hidden-lg hidden-md">
@@ -126,7 +125,7 @@
 						    	</div>
 
 							</div>	
-							<!---hello--->   
+							   
 
 					    <div class="item">
 					      <div class="container-fluid" style="background-image: url(image/bg2.png);">
