--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<meta name="description" content="ConvieneOnline.it ti aiuta a calcolare e confrontare i Preventivi più convenienti per Assicurazioni, Finanziamenti, Fideiussioni e molto altro. Risparmia con noi!">
 	<link rel="canonical" href="https://www.convieneonline.it/">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
-	<link rel="stylesheet" type="text/css" href="css/_style_blue.min.css">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/_style_blue.css">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
@@ -130,7 +129,7 @@
 					    <div class="item">
 					      <div class="container-fluid" style="background-image: url(image/bg2.png);">
 						    		<div class="text-center" style="padding: 40px; ">
-						    			<h1 class=" text-blue"><strong>Lorem ipsum dolor sit amet</strong></h1>
+						    			<h1 class=" text-blue">Lorem ipsum dolor sit amet</h1>
 						    			<br>
 						    			<h4 style=" padding: 15px;" >Online Comparison of Insurance and Financing</h4>
 						    			<br>
@@ -142,7 +141,7 @@
 					    <div class="item">
 					      <div class="container-fluid" style="background-image: url(image/bg2.png);">
 						    		<div class="text-center" style="padding: 40px; ">
-						    			<h1 class=" text-blue"><strong>Lorem ipsum dolor sit amet</strong></h1>
+						    			<h1 class=" text-blue">Lorem ipsum dolor sit amet</h1>
 						    			<br>
 						    			<h4 style=" padding: 15px;" >Online Comparison of Insurance and Financing</h4>
 						    			<br>
@@ -169,7 +168,7 @@
 				<div class="container">
 					<div class="col-lg-12 text-center">
 						<h1 class="text-blue mar-bot-15" style="font-family: Asap,sans-serif";>Online Comparison of Insurance and Financing</h1>
-						<h3 class="mar-bot-15">Calculate and Compare the best Quotes</h3>
+						<h3 class="mar-bot-15" style="color: #727272b5;">Calculate and Compare the best Quotes</h3>
 					</div>
 				</div>
 			</section>
@@ -474,7 +473,7 @@
 				<div class="container">
 					<div class="col-lg-12 text-center s1">
 						<h1 class="text-blue mar-bot-15">Why choose ConvieneOnline.it?</h1>
-						<h3 class="mar-bot-15">allows you to compare online the insurance and financing of the best companies worldwide to help you choose the optimal solution in terms of quality and saving</h3>
+						<h3 class="mar-bot-15" style="color: #727272b5;">allows you to compare online the insurance and financing of the best companies worldwide to help you choose the optimal solution in terms of quality and saving</h3>
 					</div>
 				</div>
 			</section>
@@ -487,7 +486,7 @@
 							<img src="image/convenience.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h5 class="mar--bot-15">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h5>
+							<h6 class="mar--bot-15">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -495,7 +494,7 @@
 							<img src="image/asistance.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h5 class="mar--bot-15">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h5>
+							<h6 class="mar--bot-15">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -503,7 +502,7 @@
 							<img src="image/security.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h5 class="mar--bot-15">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h5>
+							<h6 class="mar--bot-15">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -511,7 +510,7 @@
 							<img src="image/flexibility.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h5 class="mar--bot-15">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h5>
+							<h6 class="mar--bot-15">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h6>
 						</div>
 					</div>
 				</div>
@@ -527,8 +526,11 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h1 class="text-blue mar-bot-15">Widget sample till or here from whole school</h1>
 							<h5 class="mar-bot-15">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h5>
-							<a href="#" class="arial_regular button slider_button_orange" tabindex="0">See more...</a>
-							<a href="#" class="arial_regular button slider_button_orange" tabindex="0" style="background-color:#f60;">See more...</a>
+							<div class="btn-see3">
+								<a href="#" class="arial_regular button slider_button_orange" tabindex="0">See more...</a>
+								<a href="#" class="arial_regular button slider_button_orange" tabindex="0" style="background-color:#f60;">See more...</a>
+							</div>
+							
 							<!-- <button style="width: 20%; padding: 5px; border-radius: 40px; background-color: #00abcc; color: white;">See more...</button>
 							<button style="width: 20%; padding: 5px; border-radius: 40px; background-color: #eb661c; color: white;">See more...</button> -->
 						</div>
