--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="canonical" href="https://www.convieneonline.it/">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
 	<link rel="stylesheet" type="text/css" href="css/_style_blue.css">
+	<link rel="stylesheet" type="text/css" href="css/_style_blue.min.css">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
@@ -28,7 +29,9 @@
 <body>
 	<div class="wrapper" itemscope itemtype="http://schema.org/WebPage">
 		<div class="container">
-			
+			<div class="row">
+
+			</div>
 		</div>
 		<!---------navbar---------->
 		<nav class="navbar" id="headerTop">
@@ -36,7 +39,7 @@
 				<div class="row">
 					<div class="navbar-header">
 						<a class="navbar-brand logo logo-conviene" href="#" title="ConvieneOnline.it - Comparatore di Assicurazioni e Finanziamenti Online">
-							<img  class="logo" src="image/12.png" alt="ConvieneOnline.it-Comparatore di Assicurazioni e Finanziamenti Online">
+							<img  class="logo logo-size" src="image/12.png" alt="ConvieneOnline.it-Comparatore di Assicurazioni e Finanziamenti Online">
 						</a>
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#opener">
                             <span class="sr-only">Toggle navigation</span>
@@ -45,8 +48,9 @@
                             <span class="icon-bar"></span>
                         </button>
 						<div class="header-info pull-right">
-							<img class="phone3" src="image/Phone2.png">
+							
 							<a href="tel:085/9066336" class="tel" title="Tel">
+								
 								<strong class="hidden-mm hidden-xs">
 									085/9066336
 								</strong>
@@ -397,7 +401,7 @@
 			</section>
 <!----------end widget 51------->
 <!---------start widget 52------>
-			<section style="background-color: #ededed57;">
+			<section style="background-color: #ededed57; padding-bottom: 3%;">
 				<div class="container">
 					<div class="panel-group" id="accordion">
 		    			<!-- First Panel -->
@@ -521,7 +525,7 @@
 				<div class="container">
 					<div class="row si55">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<img class="img-responsive pad-bot-15" src="image/people.png">
+							<img class="img-responsive pad-bot-15 img-people" src="image/people.png">
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h1 class="text-blue mar-bot-15">Widget sample till or here from whole school</h1>
