--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 			<section class="pad-bot-30 s1">
 				<div class="container">
 					<div class="col-lg-12 text-center">
-						<h1 class="text-blue mar-bot-15" style="font-family: Asap,sans-serif";>Online Comparison of Insurance and Financing</h1>
-						<h3 class="mar-bot-15" style="color: #727272b5;">Calculate and Compare the best Quotes</h3>
+						<h1 class="text-blue mar-bot-15">Online Comparison of Insurance and Financing</h1>
+						<h4 class="mar-bot-15 font-cal">Calculate and Compare the best Quotes</h4>
 					</div>
 				</div>
 			</section>
@@ -349,11 +349,11 @@
             </section>
 <!----------end widget 48-------->
 <!-------start widget 49----->
-			<section class="pad-bot-30 pad-bot-30 s1">
+			<section class="pad-bot-30 pad-bot-30 s1-1">
 				<div class="container">
 					<div class="col-lg-12 text-center">
 						<h1 class="text-blue mar-bot-15">Our numbers</h1>
-						<h3 class="mar-bot-15">Lorem ipsum dolor sit amet</h3>
+						<h3 class="mar-bot-15 h3-size">Lorem ipsum dolor sit amet</h3>
 					</div>
 				</div>
 			</section>
