--- a/index.html
+++ b/index.html
@@ -391,11 +391,11 @@
 			</section>
 <!----------end widget 50------->
 <!---------start widget 51------>
-			<section class="pad-bot-30 pad-bot-30 s1">
+			<section class="pad-bot-30 pad-bot-30 s1-1">
 				<div class="container">
 					<div class="col-lg-12 text-center">
 						<h1 class="text-blue mar-bot-15">Frequently asked questions</h1>
-						<h3 class="mar-bot-15">Lorem ipsum dolor sit amet</h3>
+						<h3 class="mar-bot-15 h3-size">Lorem ipsum dolor sit amet</h3>
 					</div>
 				</div>
 			</section>
@@ -407,14 +407,15 @@
 		    			<!-- First Panel -->
 					    <div class="panel panel-default">
 					        <div class="panel-heading">
-					             <h3 class="panel-title" data-toggle="collapse" data-target="#collapseOne">
+					             <h3 class="panel-title header-accord" data-toggle="collapse" data-target="#collapseOne">
 					                 What is the difference between ConvieneOnline and other insurance sites?
 					             </h3>
 					        </div>
 					        <div id="collapseOne" class="panel-collapse collapse">
-					            <div class="panel-body">
-					                because ConvenOnline, eliminating inermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.<br>
-					                ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, convenient and quick way, from clarification questions to the possible management of an accident.
+					            <div class="panel-body accord-section">
+
+										<h3 class="mar-bot-15 content-accord">because ConvenOnline, eliminating inermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.<br><br>ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, convenient and quick way, from clarification questions to the possible management of an accident.</h3>
+
 					            </div>
 					        </div>
 					    </div>
@@ -422,14 +423,13 @@
 					    <!-- Second Panel -->
 					    <div class="panel panel-default">
 					        <div class="panel-heading">
-					             <h3 class="panel-title" data-toggle="collapse" data-target="#collapseTwo">
+					             <h3 class="panel-title header-accord" data-toggle="collapse" data-target="#collapseTwo">
 					                  What are the main characteristics?
 					             </h3>
 					        </div>
 					        <div id="collapseTwo" class="panel-collapse collapse">
-					            <div class="panel-body">
-					                because ConvenOnline, eliminating inermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.<br>
-					                ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, convenient and quick way, from clarification questions to the possible management of an accident.
+					            <div class="panel-body accord-section">
+									<h3 class="mar-bot-15 content-accord">because ConvenOnline, eliminating inermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.<br><br>ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, convenient and quick way, from clarification questions to the possible management of an accident.</h3>
 					            </div>
 					        </div>
 					    </div>
@@ -437,14 +437,13 @@
 					    <!-- Third Panel -->
 					    <div class="panel panel-default">
 					        <div class="panel-heading">
-					             <h4 class="panel-title" data-toggle="collapse" data-target="#collapseThree">
+					             <h4 class="panel-title header-accord" data-toggle="collapse" data-target="#collapseThree">
 					                 What are the characteristics?
 					             </h4>
 					        </div>
 					        <div id="collapseThree" class="panel-collapse collapse">
-					            <div class="panel-body">
-					                because ConvenOnline, eliminating inermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.<br>
-					                ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, convenient and quick way, from clarification questions to the possible management of an accident.
+					            <div class="panel-body accord-section">
+									<h3 class="mar-bot-15 content-accord">because ConvenOnline, eliminating inermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.<br><br>ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, convenient and quick way, from clarification questions to the possible management of an accident.</h3>
 					            </div>
 					        </div>
 					    </div>
