--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 			</section>
 <!----------end widget 53---------->
 <!----------start widget 54--------->
-			<section>
+			<section style="margin-top: 100px;">
 				<div class="container">
 					<div class="col-lg-12 text-center s1">
 						<h1 class="text-blue mar-bot-15">Why choose ConvieneOnline.it?</h1>
@@ -482,7 +482,7 @@
 			</section>
 <!----------end widget 54-------->
 <!----------start widget 55--------->
-			<section style="background-color: #ededed57;">
+			<section style="background-color: #ededed57; margin-top: 30px;">
 				<div class="container">
 					<div class="row si55">
 						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
@@ -520,7 +520,7 @@
 			</section>
 <!---------end widget 55----------->
 <!---------start widget 56----------->
-			<section style="background-color: #ededed57; margin-top: 10%;">
+			<section style="background-color: #ededed57; margin-top: 55px;">
 				<div class="container">
 					<div class="row si55">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
