--- a/index.html
+++ b/index.html
@@ -456,19 +456,21 @@
 <!-----------start widget 53-------->
 			<section style="background-color: #ededed57; margin-top: 115px;">
 
-				<div class="container">
+
 					<div class="row si53">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<img class="Phone4" src="image/phone1.png">
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 phone-section">
-							<h1 class="text-blue mar-bot-15">Lorem Ipsum dollor sit amet cat from</h1>
+							<h1 class="text-blue mar-bot-15 img-text">Lorem Ipsum dollor sit amet cat from</h1>
 							<hr>
-							<div>Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</div>
+							<div>
+								<h6 style="line-height: 1.3;">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h6>
+							</div>
 						</div>
 					</div>
 
-				</div>				
+
 			</section>
 <!----------end widget 53---------->
 <!----------start widget 54--------->
@@ -476,7 +478,7 @@
 				<div class="container">
 					<div class="col-lg-12 text-center s1">
 						<h1 class="text-blue mar-bot-15">Why choose ConvieneOnline.it?</h1>
-						<h3 class="mar-bot-15" style="color: #727272b5;">allows you to compare online the insurance and financing of the best companies worldwide to help you choose the optimal solution in terms of quality and saving</h3>
+						<h3 class="mar-bot-15" style="color: #727272b5; font-size: 20px;">allows you to compare online the insurance and financing of the best companies worldwide to help you choose the optimal solution in terms of quality and saving</h3>
 					</div>
 				</div>
 			</section>
