--- a/index.html
+++ b/index.html
@@ -530,14 +530,11 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h1 class="text-blue mar-bot-15">Widget sample till or here from whole school</h1>
-							<h5 class="mar-bot-15">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h5>
+							<h5 class="mar-bot-15" style="line-height: 1.2;">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h5>
 							<div class="btn-see3">
-								<a href="#" class="arial_regular button slider_button_orange" tabindex="0">See more...</a>
-								<a href="#" class="arial_regular button slider_button_orange" tabindex="0" style="background-color:#f60;">See more...</a>
+								<button style="width:31%; padding: 8px; border-radius: 11px; background-color: #00abcc; color: white;">See more...</button>
+								<button style="width: 31%; padding: 8px; border-radius: 11px; background-color: #eb661c; color: white;">See more...</button>
 							</div>
-							
-							<!-- <button style="width: 20%; padding: 5px; border-radius: 40px; background-color: #00abcc; color: white;">See more...</button>
-							<button style="width: 20%; padding: 5px; border-radius: 40px; background-color: #eb661c; color: white;">See more...</button> -->
 						</div>
 					</div>
 				</div>
