--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 	<link rel="canonical" href="https://www.convieneonline.it/">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
 	<link rel="stylesheet" type="text/css" href="css/_style_blue.css">
-	<link rel="stylesheet" type="text/css" href="css/_style_blue.min.css">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.bxslider.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 	<link rel="stylesheet" type="text/css" href="css/main.min.css">
 
 	<link rel="stylesheet" type="text/css" href="css/slider.min.css">
@@ -456,7 +454,7 @@
 <!-----------start widget 53-------->
 			<section style="background-color: #ededed57; margin-top: 115px;">
 
-
+				<div class="container">
 					<div class="row si53">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<img class="Phone4" src="image/phone1.png">
@@ -469,7 +467,7 @@
 							</div>
 						</div>
 					</div>
-
+				</div>
 
 			</section>
 <!----------end widget 53---------->
@@ -491,7 +489,7 @@
 							<img src="image/convenience.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h6>
+							<h6 class="mar--bot-15" style="line-height: 1.3;">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -499,7 +497,7 @@
 							<img src="image/asistance.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h6>
+							<h6 class="mar--bot-15" style="line-height: 1.3;">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -507,7 +505,7 @@
 							<img src="image/security.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h6>
+							<h6 class="mar--bot-15" style="line-height: 1.3;">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -515,7 +513,7 @@
 							<img src="image/flexibility.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h6>
+							<h6 class="mar--bot-15" style="line-height: 1.3;">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h6>
 						</div>
 					</div>
 				</div>
@@ -530,10 +528,10 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h1 class="text-blue mar-bot-15">Widget sample till or here from whole school</h1>
-							<h5 class="mar-bot-15" style="line-height: 1.2;">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h5>
+							<h5 class="mar-bot-15" style="line-height: 1.3;">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h5>
 							<div class="btn-see3">
-								<button style="width:31%; padding: 8px; border-radius: 11px; background-color: #00abcc; color: white;">See more...</button>
-								<button style="width: 31%; padding: 8px; border-radius: 11px; background-color: #eb661c; color: white;">See more...</button>
+								<button style="width:31%; padding: 8px; border-radius: 20px; background-color: #00abcc; color: white;">See more...</button>
+								<button style="width: 31%; padding: 8px; border-radius: 20px; background-color: #eb661c; color: white;">See more...</button>
 							</div>
 						</div>
 					</div>
