--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
 	<meta name="description" content="ConvieneOnline.it ti aiuta a calcolare e confrontare i Preventivi più convenienti per Assicurazioni, Finanziamenti, Fideiussioni e molto altro. Risparmia con noi!">
 	<link rel="canonical" href="https://www.convieneonline.it/">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
-	<link rel="stylesheet" type="text/css" href="css/_style_blue.css">
+
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.bxslider.min.css">
-
-	<link rel="stylesheet" type="text/css" href="css/main.min.css">
-
 	<link rel="stylesheet" type="text/css" href="css/slider.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.min.css">
+	<link rel="stylesheet" type="text/css" href="css/_style_blue.css">
 	<link href="https://fonts.googleapis.com/css2?family=Asap&display=swap" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
 </head>
 <body>
-	<div class="wrapper" itemscope itemtype="http://schema.org/WebPage">
+	<div class="wrapper">
 		<div class="container">
 			<div class="row">
 
@@ -105,13 +103,6 @@
 <!--------slider 1---------->
 				  <section>
 					<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		  <!-- Indicators -->
-					  <ol class="carousel-indicators">
-					    <li data-target="#myCarousel" data-slide-to="0" class="active" style="border: 1px solid #00abcc;"></li>
-					    <li data-target="#myCarousel" data-slide-to="1" style="border: 1px solid #00abcc;"></li>
-					    <li data-target="#myCarousel" data-slide-to="2" style="border: 1px solid #00abcc;"></li>
-					  </ol>
-
 					  <!-- Wrapper for slides -->
 					  <div class="carousel-inner">
 					  	    <div class="item active">
@@ -119,12 +110,11 @@
 						    		<div class="text-center" style="padding: 40px; ">
 						    			<h1 class=" text-blue">Lorem ipsum dolor sit amet</h1>
 						    			<br>
-						    			<h4 style=" padding: 15px;" >Online Comparison of Insurance and Financing</h4>
+						    			<h4 class="pad-15" >Online Comparison of Insurance and Financing</h4>
 						    			<br>
 						    			<a href="#" class="arial_regular button slider_button_orange" tabindex="0" style="background-color:#f60;">See more...</a>
 						    		</div>
 						    	</div>
-
 							</div>	
 							   
 
@@ -150,7 +140,6 @@
 						    			<a href="#" class="arial_regular button slider_button_orange" tabindex="0" style="background-color:#f60;">See more...</a>
 						    		</div>
 						  </div>
-
 					    </div>
 					  </div>
 <!-- Left and right controls -->
@@ -546,67 +535,48 @@
 			</section>
 <!--------end widget 57------------>
 <!--------start widget 58------------>
-			<section style="background-color: #ededed57;">
+			<section>
 				<div class="container">
-					<div id="carouselExample" class="carousel slide si55" data-ride="carousel" data-interval="12000">
-						<div class="carousel-inner row w-100 mx-auto flex-nowrap" role="listbox">
-							<div class="carousel-item col-md-3 active">
-								<img class="img-fluid mx-auto d-block" src="image/Layer 41.png" alt="slide 1">
-								<div class="slide-1">
-									<h4 class="text-blue">Widget sample till or here from whole school</h4>
-								</div>
-								<div class="slide-2">
-									<p>04/07/2020</p>
-								</div>
-								<div class="slide-2">
-									<p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
-								</div>
-							</div>
-							<div class="carousel-item col-md-3">
-								<img class="img-fluid mx-auto d-block" src="image/Layer 42.png" alt="slide 2">
-								<div class="slide-1">
-									<h4 class="text-blue">Widget sample till or here</h4>
-								</div>
-								<div class="slide-2">
-									<p>04/07/2020</p>
-								</div>
-								<div class="slide-2">
-									<p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
-								</div>
-
-
-							</div>
-							<div class="carousel-item col-md-3">
-								<img class="img-fluid mx-auto d-block" src="image/Layer 43.png" alt="slide 3">
-								<div class="slide-1">
-									<h4 class="text-blue">Widget sample till</h4>
-								</div>
-								<div class="slide-2">
-									<p>04/07/2020</p>
-								</div>
-								<div class="slide-2">
-									<p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
-								</div>
-							</div>
-							<div class="carousel-item col-md-3">
-								<img class="img-fluid mx-auto d-block" src="image/Layer 44.png" alt="slide 4">
-								<div class="slide-1">
-									<h4 class="text-blue">Widget sample till or here from whole school</h4>
-								</div>
-								<div class="slide-2">
-									<p>04/07/2020</p>
-								</div>
-								<div class="slide-2">
-									<p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
-								</div>
-							</div>
-
+					<div class="row blogslider">
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
 						</div>
-
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
 					</div>
 				</div>
 			</section>
-
 
 <!--------end widget 58------------>
 <!--------start widget 59------------>
@@ -621,18 +591,13 @@
 				</div>
 			</section>
 <!--------end widget 59------------>
-
-
-
 		</main>
 	</div>
-
-
-
-
-
-
-	
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script src="js/jquery-1.10.2.min.js"></script>
+	<script src="js/jquery.bxslider.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
