--- a/index.html
+++ b/index.html
@@ -430,16 +430,16 @@
 <!-----------start widget 53-------->
 			<section class="sec-53 sec-bg">
 
-				<div class="container">
+				<div class="container pad-top-25 pad-bot-15">
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<img class="Phone4" src="image/phone1.png">
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h1 class="text-blue mar-bot-15 img-text">Lorem Ipsum dollor sit amet cat from</h1>
-							<hr>
+							<hr class="black-line-thin">
 							<div>
-								<h6 style="line-height: 1.3;">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h6>
+								<h6 class="mar-top-10 img-text">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h6>
 							</div>
 						</div>
 					</div>
@@ -465,7 +465,7 @@
 							<img src="image/convenience.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15" style="line-height: 1.3;">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h6>
+							<h6 class="mar-bot-15" style="line-height: 1.3;">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -473,7 +473,7 @@
 							<img src="image/asistance.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15" style="line-height: 1.3;">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h6>
+							<h6 class="mar-bot-15" style="line-height: 1.3;">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -481,7 +481,7 @@
 							<img src="image/security.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15" style="line-height: 1.3;">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h6>
+							<h6 class="mar-bot-15" style="line-height: 1.3;">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h6>
 						</div>
 					</div>
 					<div class="row si55">
@@ -489,7 +489,7 @@
 							<img src="image/flexibility.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar--bot-15" style="line-height: 1.3;">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h6>
+							<h6 class="mar-bot-15" style="line-height: 1.3;">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h6>
 						</div>
 					</div>
 				</div>
