--- a/index.html
+++ b/index.html
@@ -448,66 +448,66 @@
 			</section>
 <!----------end widget 53---------->
 <!----------start widget 54--------->
-			<section style="margin-top: 100px;">
+			<section class="sec-54">
 				<div class="container">
 					<div class="col-lg-12 text-center s1">
 						<h1 class="text-blue mar-bot-15">Why choose ConvieneOnline.it?</h1>
-						<h3 class="mar-bot-15" style="color: #727272b5; font-size: 20px;">allows you to compare online the insurance and financing of the best companies worldwide to help you choose the optimal solution in terms of quality and saving</h3>
+						<h4 class="mar-bot-15 text-choose" style="color: #727272b5;">allows you to compare online the insurance and financing of the best companies worldwide to help you choose the optimal solution in terms of quality and saving</h4>
 					</div>
 				</div>
 			</section>
 <!----------end widget 54-------->
 <!----------start widget 55--------->
-			<section style="background-color: #ededed57; margin-top: 30px;">
+			<section class="mar-bot-30 sec-bg">
 				<div class="container">
-					<div class="row si55">
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+					<div class="row pad-top-40">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon-img">
 							<img src="image/convenience.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar-bot-15" style="line-height: 1.3;">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h6>
+							<h6 class="icon-text">CONVENIENCE : because ConvenOnline, eliminating intermediaries, allows you to compare the most convenient Quotes easily from home or office with a few simple steps with great savings of time and money.</h6>
 						</div>
 					</div>
-					<div class="row si55">
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+					<div class="row pad-top-30">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon-img">
 							<img src="image/asistance.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar-bot-15" style="line-height: 1.3;">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h6>
+							<h6 class="icon-text">CUSTOMER ASSISTANCE : ConvenOnline consultants are professionals of the sector at your complete disposal who will assist you during the search, choice and management in a simple, conveninet and quick way, from clarification questions to the possible management of an accident.</h6>
 						</div>
 					</div>
-					<div class="row si55">
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+					<div class="row pad-top-30">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon-img">
 							<img src="image/security.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar-bot-15" style="line-height: 1.3;">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h6>
+							<h6 class="icon-text">SECURITY : ConvenOnline collaborates with important and professional companies operation in the sector for many years and uses a 128 bit Secure Sockets Layerencryption system that allows you to buy our products in total safety.</h6>
 						</div>
 					</div>
-					<div class="row si55">
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+					<div class="row pad-top-30 mar-bot-30">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon-img">
 							<img src="image/flexibility.png">
 						</div>
 						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-							<h6 class="mar-bot-15" style="line-height: 1.3;">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h6>
+							<h6 class="icon-text">FLEXIBILITY : our online quotation platform offers a wide range of insurance and financial products, all customizable in terms of guarantees and features with a simple click. By filling out the form, with ConvenOnline you can compare the best online quotes for free and choose the one closest to your needs, in maximum quality and reliability.</h6>
 						</div>
 					</div>
 				</div>
 			</section>
 <!---------end widget 55----------->
 <!---------start widget 56----------->
-			<section style="background-color: #ededed57; margin-top: 55px;">
+			<section class="sec-bg mar-top-50">
 				<div class="container">
-					<div class="row si55">
+					<div class="row mar-top-30 mar-bot-30">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<img class="img-responsive pad-bot-15 img-people" src="image/people.png">
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h1 class="text-blue mar-bot-15">Widget sample till or here from whole school</h1>
-							<h5 class="mar-bot-15" style="line-height: 1.3;">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h5>
+							<h5 class="mar-bot-15 icon-text">Lorem ipum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</h5>
 							<div class="btn-see3">
-								<button style="width:31%; padding: 8px; border-radius: 20px; background-color: #00abcc; color: white;">See more...</button>
-								<button style="width: 31%; padding: 8px; border-radius: 20px; background-color: #eb661c; color: white;">See more...</button>
+								<button class="btn-see" style="">See more...</button>
+								<button class="btn-see1 mar-left-30">See more...</button>
 							</div>
 						</div>
 					</div>
@@ -516,17 +516,35 @@
 <!--------end widget 56------------>
 <!--------start widget 57------------>
 			<section>
-				<div class="s1">
-					<h1 class="text-blue mar-bot-15 text-center">News</h1>
+				<div class="container">
+					<h1 class="text-blue mar-bot-15 text-center mar-top-50 pad-of-0">News</h1>
 				</div>
 			</section>
 <!--------end widget 57------------>
 <!--------start widget 58------------>
-			<section>
-				<div class="container">
-					<div class="row blogslider">
+			<section class="sec-bg">
+				<div class="container pad-top-30">
+					<div class="row blogslider mar-bot-30">
 						<div>
 							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2042.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2043.png">
+							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
+							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
+							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
+						</div>
+						<div>
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2044.png">
 							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
 							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
 							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
@@ -538,25 +556,7 @@
 							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
 						</div>
 						<div>
-							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
-							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
-							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
-							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
-						</div>
-						<div>
-							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
-							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
-							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
-							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
-						</div>
-						<div>
-							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
-							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
-							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
-							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
-						</div>
-						<div>
-							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2041.png">
+							<img class="col-xs-12 pad-of-0 pad-bot-15" src="image/Layer%2042.png">
 							<h4 class="col-xs-12 text-blue pad-bot-10">Widget sample till or here from whole school</h4>
 							<p class="col-xs-12 pad-bot-10">04/07/2020</p>
 							<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan</p>
@@ -569,10 +569,10 @@
 <!--------start widget 59------------>
 			<section>
 				<div class="container">
-					<div class="row s1" style="text-align: center; ">
-						<a href="#" class="text-blue text-center">Know more</a>
+					<div class="row text-center text-know">
+						<a href="#" class="text-blue">Know more</a>
 					</div>
-					<div style="text-align: center;">
+					<div class="row text-center mar-bot-50">
 						<a href="#" class="text-blue text-center"><i class="fa fa-angle-down rotate-icon"></i></a>
 					</div>
 				</div>
